Seguridad y alta disponibilidad/Practica8 DNat/reglasIPtables.txt
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT DROP
-A INPUT -i ens38 -j ACCEPT
-A INPUT -i ens33 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 172.28.100.100/32 -i ens38 -j ACCEPT
-A FORWARD -s 172.28.100.100/32 -o ens38 -j ACCEPT
-A OUTPUT -o ens38 -j ACCEPT
-A OUTPUT -o ens33 -m state --state ESTABLISHED -j ACCEPT
root@firewall:/home/cesar# iptables -S -t nat
-P PREROUTING ACCEPT
-P INPUT ACCEPT
-P OUTPUT ACCEPT
-P POSTROUTING ACCEPT
-A PREROUTING -i ens38 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.28.100.100
-A PREROUTING -i ens38 -p tcp -m tcp --dport 50000 -j DNAT --to-destination 172.28.100.100:22

iptables -P INPUT DROP
iptables -P FORWARD DROP
iptables -P OUTPUT DROP
iptables -A INPUT -i ens33 -p tcp -m tcp --dport 22 -j ACCEPT
iptables -A FORWARD -d 172.28.100.100/32 -i ens38 -j ACCEPT
iptables -A FORWARD -s 172.28.100.100/32 -o ens38 -j ACCEPT
iptables -A OUTPUT -o ens33 -m state --state ESTABLISHED -j ACCEPT
iptables -t nat -A PREROUTING -i ens38 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.28.100.100
iptables -t nat -A PREROUTING -i ens38 -p tcp -m tcp --dport 50000 -j DNAT --to-destination 172.28.100.100:22
